# Megatron-LM-Attention-Benchmark

./: pretrain_gpt.py
attn_bench/: .gitignore  README.md  pyproject.toml
attn_bench/benchmarks/: args.py  common.py  correctness.py  cross_doc_attn.py
attn_bench/configs/: check_clean_env.sh  distributed.sh  logging.sh  training.sh
attn_bench/containers/: Dockerfile.nemo26.04_te2.15  nemo_26.04_te2.15.toml
attn_bench/data_processing/: README.md  build_long_dataset.py  cleaning.py  dataset_doc_stats.py  download_dataset.py  download_fineweb_edu.py  explore_gutenberg.py  explore_pii_datasets.py  extract_long_docs.py  packed_chunk_stats.py  split_long_dataset.py  test.py  tokenize_fineweb_edu.py  tokenize_fineweb_edu_datatrove.py  tokenize_fineweb_edu_parallel.py  tokenize_fineweb_edu_simple.py
attn_bench/evaluation/: attn_capture.py  compute_generation_quality.py  compute_mauve.py  count_model_param.py  gdn_state_norm.py  inference_common.py  inference_perf.py  inference_perf_units.py  long_fineweb_inference.py  long_gutenberg_inference.py  long_inference.py  megatron_inference_sparse.py  plot_attention_patterns.py  plot_utils.py
attn_bench/git-hooks/: pre-commit
attn_bench/kernels/: attn_registry.py  megatron_wrapper.py
attn_bench/logs/: 1718955.err  1718955.out  1719038.err  1719038.out  1719113.err  1719113.out  1719183.err  1719183.out  1719272.err  1719272.out  1719322.err  1719322.out  1719340.err  1719340.out  1719408.err  1719408.out  1719484.err  1719484.out  1719525.err  1719525.out  1719560.err  1719560.out  1728401.err  1728401.out  1728522.err  (+408 more)
(+346 files in other folders)
