[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "attn-bench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
data = [
    "datasets",
    "huggingface_hub",
    "ftfy",
    "tqdm",
    "pandas",
    "matplotlib",
    "kagglehub",
    "datasketch",
    "nltk",
    "sentence-transformers",
    "scikit-learn",
    "tokenizers",
    "transformers",
    "datatrove",
    "inscriptis",
]
kernels = [
    "flash-attn",
]